@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-05-27T08:15:41Z",
-  "count_outdated" : 298,
-  "uniques_outdated" : 154,
-  "count" : 327,
+  "timestamp" : "2022-05-27T16:17:19Z",
+  "count_outdated" : 300,
+  "uniques_outdated" : 155,
+  "count" : 328,
   "uniques" : 175,
   "clones" : [
-    {
-      "timestamp": "2022-05-13T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-05-14T00:00:00Z",
       "count": 2,
