@@ -1,3 +1,10 @@
+2022-05-27T16:17:19Z:
+* notice: last 14d: unq all: 12 28
+* notice: prev accum: outdated-unq outdated-all / unq all: 154 298 / 175 327
+* notice: next accum: outdated-unq outdated-all / unq all: 155 300 / 175 328
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: changed dates: []
+
 2022-05-27T08:15:41Z:
 * notice: last 14d: unq all: 12 29
 * notice: prev accum: outdated-unq outdated-all / unq all: 154 298 / 175 328
